[project]
name = "insurance-claim-support"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "langmem>=0.0.30",
    "notebook>=7.5.7",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
